--- a/atlet/templates/atlet_index.html
+++ b/atlet/templates/atlet_index.html
@@ -1,8 +1,13 @@
-{% extends "base.html" %} {% load static %} {% load filters %} {% block meta %}
-{% endblock meta %} {% block content %}
+{% extends "base.html" %} {% load static %} {% block meta %} {% endblock meta %}
+{% block content %}
 
 <div class="">
-  <h1>Halo</h1>
+  <h1>
+    {% if atlets %} {% for atlet in atlets %}
+    <div>{{atlet.2 }}</div>
+    <h1 class="my-10 font-bold text-xl">{{ sponsor }}</h1>
+    {% endfor %} {% endif %}
+  </h1>
 </div>
 
 {% endblock content %}
