--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -94,7 +94,7 @@
         </li>
         <li>
           <a
-            href=""
+            href="{% url 'umpire:logout' %}"
             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-red-200 md:hover:bg-transparent md:border-0 md:hover:text-red-400 md:p-2"
           >
             Logout
